--- a/index.html
+++ b/index.html
@@ -164,25 +164,32 @@ th.dcol, td.dcol, th.tcol, td.tcol { text-align:center; }
   </div>
 
   <!-- Football & About -->
-  <div id="panel-football" class="card" style="display:none;"><h2>Football</h2><div class="sm-muted">Coming soon.</div></div>
-  <div id="panel-about" class="card" style="display:none;">
-    <h2>About</h2>
-    <p>
-      Limerick GAA Hub is designed to provide a clear and intuitive overview of fixtures and results — 
-      easily filterable by competition, team, or date. Over time, the aim is to build an archive of historical results.
-    </p>
+<div id="panel-about" class="card" style="display:none;">
+  <h2>About</h2>
+  <p>
+    Limerick GAA Hub is designed to provide a clear and intuitive overview of fixtures and results - easily filterable by competition, team, or date. 
+  </p>
 
-    <p>
-      Please note, this site is not associated with Limerick GAA - it is solely run by a club member with the aim of sharing information.
-    </p>
+  <p>
+    Over time, the aim is to build an archive of historical results.
+  </p>
 
-    <p>
-      Find us on 
-      <a href="https://www.instagram.com/limerickgaahub" target="_blank" rel="noopener noreferrer">Instagram</a> and 
-      <a href="https://x.com/limerickgaahub" target="_blank" rel="noopener noreferrer">X</a>, 
-      or email us at <a href="mailto:limerickgaahub@gmail.com">limerickgaahub@gmail.com</a>.
-    </p>
-  </div>
+  <p>
+    Please note: this site is not associated with Limerick GAA - it is run solely by a club member and Limerick supporter sharing resources.
+  </p>
+
+  <p>
+    <a href="https://www.instagram.com/limerickgaahub" target="_blank" rel="noopener noreferrer">
+      <i class="fab fa-instagram"></i> Instagram
+    </a>
+    <a href="https://x.com/limerickgaahub" target="_blank" rel="noopener noreferrer">
+      <i class="fab fa-x-twitter"></i> X
+    </a>
+    <a href="mailto:limerickgaahub@gmail.com">
+      <i class="fas fa-envelope"></i> limerickgaahub@gmail.com
+    </a>
+  </p>
+</div>
 
 
   <script src="js/app_v7_3_1.js"></script>
