--- a/index.html
+++ b/index.html
@@ -181,7 +181,14 @@ th.dcol, td.dcol, th.tcol, td.tcol { text-align:center; }
     </div>
   </div>
 
-  <!-- Football & About -->
+<!-- Football & About -->
+<!-- Football -->
+<div id="panel-football" class="card" style="display:none;">
+  <h2>Football</h2>
+  <div class="sm-muted">Coming soon.</div>
+</div>
+
+<!-- About -->
 <div id="panel-about" class="card" style="display:none;">
   <h2>About</h2>
   <p>
