--- a/index.html
+++ b/index.html
@@ -205,10 +205,10 @@ th.dcol, td.dcol, th.tcol, td.tcol { text-align:center; }
 
   <p>
     <a href="https://www.instagram.com/limerickgaahub" target="_blank" rel="noopener noreferrer">
-      <i class="fab fa-instagram"></i> Instagram
+      <i class="fab fa-instagram"></i> @limerickgaahub
     </a>
     <a href="https://x.com/limerickgaahub" target="_blank" rel="noopener noreferrer">
-      <i class="fab fa-x-twitter"></i> X
+      <i class="fab fa-x-twitter"></i> @limerickgaahub
     </a>
     <a href="mailto:limerickgaahub@gmail.com">
       <i class="fas fa-envelope"></i> limerickgaahub@gmail.com
