--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <title>Limerick GAA Hub</title>
 <meta name="color-scheme" content="light only">
 
-<!-- Font Awesome for social icons -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
 <style>
@@ -14,21 +13,23 @@
 * { box-sizing:border-box; }
 body { margin:20px; font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Arial; background:var(--bg); color:var(--text); -webkit-font-smoothing:antialiased; }
 h1 { margin:0 0 6px 0; font-weight:800; }
-.sub { color:#444; margin-bottom:16px; font-size:14px; }
 .sm-muted { color:#6b7280; font-size:12px; }
 
 .navtabs { display:flex; gap:8px; margin:16px 0 10px; flex-wrap:wrap; align-items:center; }
 .navtab { padding:10px 14px; border-radius:999px; background:#ececec; cursor:pointer; font-weight:700; border:1px solid transparent; }
 .navtab.active { background:var(--accent); color:#fff; border-color:var(--accent); }
-button.btn { padding:9px 12px; border-radius:10px; border:1px solid var(--line); background:#fff; cursor:pointer; }
-button.btn:hover { background:#f1f5f9; }
 
 #lgh-warning { display:none; padding:10px 12px; background:#fff3cd; color:#664d03; border:1px solid #ffe69c; border-radius:10px; margin:12px 0; }
 #lgh-error { display:none; padding:10px 12px; background:#fee2e2; color:#991b1b; border:1px solid #fecaca; border-radius:10px; margin:12px 0; white-space:pre-wrap; }
 
 .card { background:#fff; border-radius:18px; box-shadow:0 8px 24px rgba(0,0,0,.05); padding:14px; }
 
-/* Hurling menus */
+/* Section tabs (2nd level under Hurling) */
+.section-tabs { display:flex; gap:10px; margin:6px 0 12px; flex-wrap:wrap; }
+.section-tabs .seg { padding:9px 14px; border-radius:999px; background:#efefef; cursor:pointer; font-weight:800; border:1px solid transparent; }
+.section-tabs .seg.active { background:var(--accent); color:#fff; border-color:var(--accent); }
+
+/* Competition controls (only shown on Competition tab) */
 .h-row { display:flex; gap:10px; align-items:center; flex-wrap:wrap; margin:8px 0 12px; }
 .menu-wrap { position:relative; display:inline-block; }
 .trigger { display:inline-flex; align-items:center; gap:8px; padding:10px 14px; border-radius:999px; background:#eaf6ef; border:1px solid #cdebd8; font-weight:800; cursor:pointer; user-select:none; }
@@ -38,14 +39,9 @@ button.btn:hover { background:#f1f5f9; }
 .item { padding:10px 12px; border-radius:10px; cursor:pointer; font-weight:700; }
 .item:hover { background:#f1f9f4; } .item.active { background:var(--accent); color:#fff; }
 
-/* Section tabs */
-.section-tabs { display:flex; gap:10px; margin:4px 0 14px; flex-wrap:wrap; position:relative; z-index:1; }
-.section-tabs .seg { padding:9px 14px; border-radius:999px; background:#efefef; cursor:pointer; font-weight:800; border:1px solid transparent; }
-.section-tabs .seg.active { background:var(--accent); color:#fff; border-color:var(--accent); }
-
 /* Tables */
-.table-wrap { overflow:auto; border-radius:14px; border:1px solid var(--line); background:#fff; }
-table { width:100%; border-collapse:separate; border-spacing:0; table-layout:auto; } /* widen */
+.table-wrap { overflow-x:hidden; border-radius:14px; border:1px solid var(--line); background:#fff; }
+table { width:100%; border-collapse:separate; border-spacing:0; table-layout:auto; }
 thead th { position:sticky; top:0; background:#f8fafb; border-bottom:1px solid var(--line); font-size:14px; font-weight:800; color:#1f2937; text-align:left; padding:14px; }
 tbody td { padding:14px; border-bottom:1px solid var(--line); font-size:15px; }
 td.right, th.right { text-align:right; }
@@ -59,42 +55,37 @@ td.match { text-align:center; }
 .match-score { font-weight:800; }
 .match-meta { font-size:11px; color:#6b7280; margin-top:2px; }
 
+/* Badges */
 .status-badge { font-size:12px; padding:3px 8px; border-radius:999px; display:inline-block; border:1px solid var(--line); }
 .status-Fixture { background:#fff; }
 .status-Result { background:#eaf6ef; color:#065f46; border-color:#cdebd8; }
-
 .comp-badge { display:inline-flex; align-items:center; gap:6px; }
 .comp-code { font-weight:800; font-size:12px; padding:3px 8px; border-radius:999px; border:1px solid #dbece3; background:#eefaf4; color:#065f46; }
 .group-code { font-size:12px; color:#374151; }
 
+/* Filters row in Competition panel */
 .controls { display:flex; flex-wrap:wrap; gap:10px; margin:12px 0; }
 .controls > * { padding:10px 12px; border:1px solid var(--line); background:#fff; border-radius:12px; font-size:15px; min-height:42px; }
 
+/* Mobile */
 .mobile-only { display:none; }
 @media (max-width:880px){
-  thead th, tbody td { padding:9px 7px; font-size:12px; }
-  th.rcol, td.rcol { width:2.2ch; text-align:center; white-space:nowrap; }  /* no wrap for R1/R2 */
-  th.dcol, td.dcol { width:9ch; text-align:center; }
-  th.tcol, td.tcol { width:4.4ch; text-align:center; }
-  th.vcol, td.vcol { width:14ch; } /* narrower venue to give match more space */
-  th.stcol, td.stcol { width:1.8ch; text-align:center; }
-  td.match { padding:8px 7px; }
+  thead th, tbody td { padding:10px 8px; font-size:13px; }
+  /* Hide Round & Status columns completely on mobile to avoid scroll */
+  .rcol, .stcol { display:none; }
+  /* Wider venue and match column balance for no horizontal scroll */
+  th.dcol, td.dcol { width:9.5ch; text-align:center; }
+  th.tcol, td.tcol { width:5.2ch; text-align:center; }
+  th.vcol, td.vcol { width:auto; } /* allow venue to flex */
+  td.match { padding:8px 6px; }
   .mobile-only { display:block; font-size:11px; color:#6b7280; margin:6px 0 0 6px; }
 }
 th.dcol, td.dcol, th.tcol, td.tcol { text-align:center; }
 
-/* --- Optional About panel icon styles --- */
-#panel-about i {
-  margin-right: 6px;
-  color: #444;
-}
-#panel-about a {
-  margin-right: 16px;
-  text-decoration: none;
-}
-#panel-about a:hover i {
-  color: #0077b5;
-}
+/* About links */
+#panel-about i { margin-right:6px; color:#444; }
+#panel-about a { margin-right:16px; text-decoration:none; }
+#panel-about a:hover i { color:#0077b5; }
 </style>
 </head>
 
@@ -107,12 +98,20 @@ th.dcol, td.dcol, th.tcol, td.tcol { text-align:center; }
     <div class="navtab" data-nav="about">About</div>
   </div>
 
-  <div id="lgh-warning">Some features didn’t load. Ensure <code>js/app_v7_3.js</code> exists.</div>
+  <div id="lgh-warning">Some features didn’t load. Ensure <code>js/app_v7_3_2.js</code> exists.</div>
   <div id="lgh-error"></div>
 
-  <!-- Hurling panel -->
+  <!-- Hurling -->
   <div id="panel-hurling" class="card">
-    <div class="h-row">
+    <!-- Second-level tabs -->
+    <div class="section-tabs view-tabs">
+      <div class="seg vt active" data-target="group-panel">Competition</div>
+      <div class="seg vt" data-target="by-team">Team</div>
+      <div class="seg vt" data-target="by-date">Date</div>
+    </div>
+
+    <!-- Competition controls (only visible when Competition tab active) -->
+    <div class="h-row comp-controls">
       <div class="menu-wrap">
         <div class="trigger" id="comp-trigger">Competition: <span id="comp-current">—</span></div>
         <div class="menu" id="comp-menu"></div>
@@ -121,16 +120,10 @@ th.dcol, td.dcol, th.tcol, td.tcol { text-align:center; }
         <div class="trigger" id="group-trigger">Group: <span id="group-current">—</span></div>
         <div class="menu" id="group-menu"></div>
       </div>
-
-      <!-- New view tabs (Competition / Team / Date) -->
-      <div class="view-tabs section-tabs" style="margin-left:auto;">
-        <div class="seg vt active" data-target="group-panel">Competition</div>
-        <div class="seg vt" data-target="by-team">Team</div>
-        <div class="seg vt" data-target="by-date">Date</div>
-      </div>
     </div>
 
-    <div class="panel card" id="group-panel" style="margin-top:10px;">
+    <!-- Competition view -->
+    <div class="panel card" id="group-panel" style="margin-top:6px;">
       <div class="headband">
         <h2 id="panel-title" style="margin:0 0 10px 0;">—</h2>
       </div>
@@ -143,14 +136,8 @@ th.dcol, td.dcol, th.tcol, td.tcol { text-align:center; }
         </select>
       </div>
 
-      <div class="section-tabs">
-        <div class="seg active" data-view="matches">Matches</div>
-        <div class="seg" data-view="table">Table</div>
-      </div>
-
       <div class="table-wrap matches-wrap">
         <table id="g-table"><thead></thead><tbody></tbody></table>
-        <div class="mobile-only">R = Result, F = Fixture</div>
       </div>
 
       <div id="g-standings" style="margin-top:12px; display:none;">
@@ -162,52 +149,51 @@ th.dcol, td.dcol, th.tcol, td.tcol { text-align:center; }
           </table>
         </div>
       </div>
+
+      <div class="section-tabs">
+        <div class="seg active" data-view="matches">Matches</div>
+        <div class="seg" data-view="table">Table</div>
+      </div>
     </div>
 
-    <!-- BY TEAM -->
-    <div class="panel card" id="by-team" style="display:none; margin-top:10px;">
-      <div class="headband"><h2>By Team</h2><span class="pill"></span></div>
+    <!-- Team view -->
+    <div class="panel card" id="by-team" style="display:none; margin-top:6px;">
+      <div class="headband"><h2>By Team</h2></div>
       <div class="controls card"><select id="team"><option value="">Select team…</option></select></div>
-      <div class="table-wrap"><table id="team-table"><thead></thead><tbody></tbody></table><div class="mobile-only">R = Result, F = Fixture</div></div>
+      <div class="table-wrap"><table id="team-table"><thead></thead><tbody></tbody></table></div>
     </div>
 
-    <!-- BY DATE -->
-    <div class="panel card" id="by-date" style="display:none; margin-top:10px;">
-      <div class="headband"><h2>By Date</h2><span class="pill"></span></div>
-      <div class="table-wrap"><table id="date-table"><thead></thead><tbody></tbody></table><div class="mobile-only">R = Result, F = Fixture</div></div>
+    <!-- Date view -->
+    <div class="panel card" id="by-date" style="display:none; margin-top:6px;">
+      <div class="headband"><h2>By Date</h2></div>
+      <div class="table-wrap"><table id="date-table"><thead></thead><tbody></tbody></table></div>
     </div>
   </div>
 
-<!-- Football -->
-<div id="panel-football" class="card" style="display:none;">
-  <h2>Football</h2>
-  <div class="sm-muted">Coming soon.</div>
-</div>
+  <!-- Football -->
+  <div id="panel-football" class="card" style="display:none;">
+    <h2>Football</h2>
+    <div class="sm-muted">Coming soon.</div>
+  </div>
 
-<!-- About -->
-<div id="panel-about" class="card" style="display:none;">
-  <h2>About</h2>
-  <p>
-    Limerick GAA Hub is designed to provide a clear and intuitive overview of fixtures and results — easily filterable by competition, team, or date. 
-  </p>
-  <p>
-    Over time, the aim is to build an archive of historical results.
-  </p>
-  <p>
-    Please note: this site is not associated with Limerick GAA — it is run solely by a club member and Limerick supporter sharing resources.
-  </p>
-  <p>
-    <a href="https://www.instagram.com/limerickgaahub" target="_blank" rel="noopener noreferrer">
-      <i class="fab fa-instagram"></i> @limerickgaahub
-    </a>
-    <a href="https://x.com/limerickgaahub" target="_blank" rel="noopener noreferrer">
-      <i class="fab fa-x-twitter"></i> @limerickgaahub
-    </a>
-    <a href="mailto:limerickgaahub@gmail.com">
-      <i class="fas fa-envelope"></i> limerickgaahub@gmail.com
-    </a>
-  </p>
-</div>
+  <!-- About -->
+  <div id="panel-about" class="card" style="display:none;">
+    <h2>About</h2>
+    <p>
+      Limerick GAA Hub is designed to provide a clear and intuitive overview of fixtures and results — easily filterable by competition, team, or date.
+    </p>
+    <p>Over time, the aim is to build an archive of historical results.</p>
+    <p>Please note: this site is not associated with Limerick GAA — it is run solely by a club member and Limerick supporter sharing resources.</p>
+    <p>
+      <a href="https://www.instagram.com/limerickgaahub" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-instagram"></i> @limerickgaahub
+      </a>
+      <a href="https://x.com/limerickgaahub" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-x-twitter"></i> @limerickgaahub
+      </a>
+      <a href="mailto:limerickgaahub@gmail.com"><i class="fas fa-envelope"></i> limerickgaahub@gmail.com</a>
+    </p>
+  </div>
 
   <script src="js/app_v7_3_2.js"></script>
   <script>window.addEventListener('load', ()=>{ if(window.LGH_V7_3_READY!==true) document.getElementById('lgh-warning').style.display='block'; });</script>
