--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ td.vcol, th.vcol { text-align:center; }
       Limerick GAA Hub is designed to provide a clear and intuitive overview of fixtures and results, easily filterable by competition, team, or date.
     </p>
     <p>Over time, the aim is to additionally build an archive of historical results.</p>
-    <p>Please note, this site is not associated with Limerick GAA — it is run solely by a club member and Limerick supporter.</p>
+    <p>Please note, this site is not associated with Limerick GAA, it has been developed solely by a club member and Limerick supporter.</p>
     <p>
       <a href="https://www.instagram.com/limerickgaahub" target="_blank" rel="noopener noreferrer">
         <i class="fab fa-instagram"></i> @limerickgaahub
